--- a/media/index.html
+++ b/media/index.html
@@ -30,6 +30,6 @@
       <b> I don’t just dream. I execute. I win.</b>
     </p>
 
-    <a href="index.html" target="_blank">Home Page</a>
+    <a href="/index.html" target="_blank">Home Page</a>
   </body>
 </html>
