--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
       </tr>
     </table>
 
-    <a href="media/index.html" target="_blank">Media Page</a>
+    <a href="/media/index.html" target="_blank">Media Page</a>
   </body>
 </html>
